...
      child: BlocBuilder<HomepageBloc, TodoState<HomepageState>>(
        builder: (context, state) {
          ScrollController scrollController = ScrollController();

          switch (state) {
            case TodoLoading<HomepageState>():
              return "Loading".pBold.highlightColor;
            case TodoLoaded<HomepageState>(data: var data):
              if (data.todos.isEmpty) {
                return "No data".pBold.highlightColor;
              }

              // add -50 becase we want to make it load before the end of the list
...
